--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Hi! </br>I'm Aaron Fledermaus. </p>
+<p>I'm studying html, and hope to make my own website popular! </p>
+<p>Enjoy your visiting! </p>
+<p></p>
+<p>This is hosted with GitHub Pages. </p>
 </body>
 </html>
