--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <p>Hi! </br>I'm Aaron Fledermaus. </p>
-<p>I'm studying html, and hope to make my own website popular! </p>
+<p>I'm studying html, and hope to make my own website! </p>
 <p>Enjoy your visiting! </p>
 <p></p>
 <p>This is hosted with GitHub Pages. </p>
