--- a/todolist/webdevelop.html
+++ b/todolist/webdevelop.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <p>Change page size with different terminals or browses.</p>
+    <p>Change page size with different terminals or browses. </br>And keep the text looks the same. </p>
   </body>
 </html>
