--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
+<head>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 <body>
 <p>Hi! </br>I'm Aaron Fledermaus. </p>
 <p>I'm studying html, developing my own website, and hoping to make it popular! </p>
 <p>Enjoy your visiting! </p>
 </body>
+</head>
 </html>
